namespaces/live.cloud-platform.service.justice.gov.uk/probationchatbot-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "probationchatbot-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "probation-chatbot-dev"
    cloud-platform.justice.gov.uk/application: "Probation Chatbot"
    cloud-platform.justice.gov.uk/owner: "Justice AI Unit: jaiuteam@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/ai-unit-probation-chatbot"
    cloud-platform.justice.gov.uk/team-name: "probation-chatbot"
    cloud-platform.justice.gov.uk/review-after: "2027-01-07"
